Add expertise page
and changed 3d to 4d lab where found

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,10 @@ body, .content {
     font-family: "Inter", sans-serif;
   }
 
+
+/* CSS people page */
+
+
 .img-people-container {
   width: 100%;
   height: auto;
@@ -16,6 +20,33 @@ img.img-people {
   height: 100%;
 }
 .links-people {
+  :where(a) {
+    --tw-text-opacity: 1;
+  color: hsl(var(--primary-hue) var(--primary-saturation) 45% / var(--tw-text-opacity));
+  text-decoration-line: underline;
+  text-decoration-thickness: from-font;
+  text-underline-position: from-font;
+  }
+}
+
+
+
+/* CSS equipment page */
+
+.img-equipment-container {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+}
+
+img.img-equipment {
+  display: block;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+}
+.links-equipment {
   :where(a) {
     --tw-text-opacity: 1;
   color: hsl(var(--primary-hue) var(--primary-saturation) 45% / var(--tw-text-opacity));
