--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,3 +55,45 @@ img.img-equipment {
   text-underline-position: from-font;
   }
 }
+
+/* CSS icons */
+
+.icon {
+  width: 2em;
+  height: 2em;
+  /* vertical-align: -.125em;  */
+}
+
+.icon-col:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+
+.icon-col {
+  position: relative;
+  height: 32px;
+  width: 32px;
+  padding: 1rem;
+}
+/* Partly adapted from https://www.w3schools.com/css/css_tooltip.asp */
+.icon-col .tooltip {
+  visibility: hidden;
+  min-width: 128px;
+  top: 100%;
+  left: 50%;
+  margin-left: -80px;
+
+  background-color: #00123f;
+  color: #fafafa;
+  text-align: center;
+  padding: 12px;
+  border-radius: 9px;
+  display: block;
+
+  position: absolute;
+  z-index: 1;
+}
+.icon-col:hover .tooltip {
+  visibility: visible;
+}
