minor fixes and additions

--- a/layouts/shortcodes/bigcard.html
+++ b/layouts/shortcodes/bigcard.html
@@ -59,7 +59,7 @@
 
   <div class="hx-flex hx-gap-2 hx-px-4 hx-pb-4"> 
     {{- with $scholar -}}
-      <a href="{{ . }}" class="hx-px-2">
+      <a href="{{ . }}">
         {{ partial "icons/icon" $scholar_icon }}
       </a>
     {{- end -}}
